# spine

./: .ghci  .gitmodules  README.md  ambiata-spine.cabal  ambiata-spine.lock-7.10.2  ambiata-spine.lock-8.0.1  ambiata-spine.lock-8.0.2  boris.toml  master.toml  spine.cabal
src/: Spine.hs
src/Spine/: Batch.hs  Data.hs  Example.hs  Memory.hs  P.hs  Schema.hs
test/: ambiata-spine-test.cabal  test-io.hs  test.hs
test/Test/IO/Spine/: Data.hs  Schema.hs
test/Test/Spine/: Arbitrary.hs  Memory.hs  Schema.hs
