name:                  ambiata-spine
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-spine
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-spine

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-mismi-core
                     , amazonka-dynamodb               >= 1.3.6      && < 1.5
                     , conduit                         == 1.2.*
                     , containers                      == 0.5.*
                     , lens                            >= 4.6        && < 4.13
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Spine.Data
                       Spine.Example
                       Spine.Schema

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-spine
                    , ambiata-mismi-core
                    , ambiata-mismi-core-test
                    , ambiata-p
                    , text
                    , QuickCheck                      >= 2.7      && < 2.9
