name:                  ambiata-spine
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-spine
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-spine

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-mismi-core
                     , ambiata-x-eithert
                     , amazonka-dynamodb               >= 1.3.6      && < 1.5
                     , bytestring                      == 0.10.*
                     , conduit                         == 1.2.*
                     , containers                      == 0.5.*
                     , lens                            >= 4.8        && < 4.15
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
                     , time                            >= 1.4        && < 1.7
                     , time-locale-compat              == 0.1.*
                     , transformers                    >= 0.4        && < 0.6
                     , unordered-containers            == 0.2.*


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Spine.Data
                       Spine.Example
                       Spine.Memory
                       Spine.Schema

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-spine
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , amazonka-dynamodb               >= 1.3.6      && < 1.5
                     , unordered-containers            == 0.2.*
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-spine
                    , ambiata-mismi-core
                    , ambiata-mismi-core-test
                    , ambiata-p
                    , ambiata-x-eithert
                    , amazonka-dynamodb               >= 1.3.6      && < 1.5
                    , lens                            >= 4.8        && < 4.15
                    , text
                    , time                            >= 1.4        && < 1.7
                    , transformers                    >= 0.4        && < 0.6
                    , unordered-containers            == 0.2.*
                    , QuickCheck                      >= 2.7      && < 2.9
