name:                  spine
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Tim McGilchrist <timmcgil@gmail.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Spine
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           Spine - managing schemas for DynamoDB

library
  build-depends:
                       base                            >= 3          && < 5
                     , mismi-core
                     , amazonka-dynamodb               >= 1.3.6      && < 1.6
                     , bytestring                      == 0.10.*
                     , conduit                         == 1.2.*
                     , containers                      == 0.5.*
                     , lens                            >= 4.8        && < 4.16
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
                     , time                            >= 1.4        && < 1.9
                     , time-locale-compat              == 0.1.*
                     , transformers                    >= 0.4        && < 0.6
                     , transformers-either
                     , unordered-containers            == 0.2.*
                     , these                           == 0.7.*


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Spine.Batch
                       Spine.Data
                       Spine.Example
                       Spine.Memory
                       Spine.Schema

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , spine
                     , ambiata-disorder-core
                     , hedgehog-corpus
                     , amazonka-dynamodb
                     , unordered-containers
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , hedgehog-corpus
                    , spine
                    , mismi-core
                    , mismi-core-test
                    , amazonka-dynamodb
                    , lens
                    , text
                    , time
                    , transformers
                    , transformers-either
                    , unordered-containers
                    , QuickCheck
