name:                  ambiata-spine-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base
                     , ambiata-disorder-core
                     , ambiata-p
                     , ambiata-spine
                     , ambiata-mismi-core
                     , ambiata-mismi-core-test
                     , QuickCheck                      >= 2.8.2      && < 2.9


  exposed-modules:
                     Test.Spine.Schema
