name:                  ambiata-spine-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                      base
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-spine
                    , ambiata-mismi-core
                    , ambiata-mismi-core-test
                    , ambiata-p
                    , ambiata-x-eithert
                    , amazonka-dynamodb               >= 1.3.6      && < 1.5
                    , lens                            >= 4.8        && < 4.15
                    , text
                    , time                            >= 1.4        && < 1.7
                    , transformers                    >= 0.4        && < 0.6
                    , unordered-containers            == 0.2.*
                    , QuickCheck                      >= 2.7        && < 2.10


  exposed-modules:
                     Test.Spine.Schema
